# TouchAI

./: .gitignore  .prettierignore  .prettierrc  README.md  drizzle.config.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.husky/: pre-commit
drizzle/: 0000_sad_hairball.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  database.rs  mod.rs  shortcut.rs  window.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/system/: autostart.rs  database.rs  logging.rs  mod.rs  shortcut.rs
src-tauri/src/core/window/: mod.rs
src-tauri/src/core/window/popup/: manager.rs  mod.rs  registry.rs
src-tauri/src/core/window/search/: mod.rs
src-tauri/src/core/window/settings/: mod.rs
src-tauri/src/core/window/tray/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/utils/: mod.rs  path.rs
src-tauri/src/window/: mod.rs
src/components/: ResponseDisplay.vue  SearchBar.vue  UserAvatar.vue
src/composables/: useAiRequest.ts  useAlert.ts  useConfirm.ts  useContextMenu.ts  useWindowResize.ts
src/database/: dialect.ts  driver.ts  index.ts  migrator.ts  schema.ts  seed.ts
src/router/: index.ts
src/stores/: settings.ts
src/styles/: markdown.css  tailwind.css
src/types/: markdown-it-plugins.d.ts
src/utils/: attachment.ts  linkInterceptor.ts  (+6 more)
(+72 files in other folders)
