[package]
name = "touchai"
version = "0.1.0"
description = "TouchAI - 一款桌面 AI 工具，愿景是 AI 一触即达"
authors = ["QianCheng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "touchai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
image = "0.25"
time = { version = "0.3", features = ["macros"] }
tauri-plugin-clipboard-x = "2.0.1"
tauri-plugin-fs-pro = "2.4.0"
tauri-plugin-process = "2"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
